--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@ main {
     /* Reducido */
 }
 
-.gap-secondary-info {
+.gap-lap-diff {
     display: block;
     font-size: 0.7em;
     color: #aaa;
